--- a/custom_components/philips_airpurifier_http/manifest.json
+++ b/custom_components/philips_airpurifier_http/manifest.json
@@ -5,6 +5,5 @@
   "issue_tracker": "https://github.com/GeorgeSG/philips-airpurifier/issues",
   "codeowners": ["@GeorgeSG"],
   "requirements": ["py-air-control==2.3.0"],
-  "version": "1.4.2",
-  "config_flow": true
+  "version": "1.4.2"
 }
